<resources>
    <string name="app_name">Remember Me</string>
    <string name="action_settings">Settings</string>
    <string name="date_text">Set due date</string>
    <string name="reminder_text">Add your reminder here…</string>
    <string name="note_text">Additional notes (optional)</string>
    <string name="button_title_new_reminder">CREATE NEW REMINDER</string>
    <string name="cancel_button">CANCEL</string>
    <string name="save_button">SAVE</string>
    <string name="title_spinner">Choose your importance</string>

    <!--Array list Importance options-->
    <string name="important">Important</string>
    <string name="urgent">Urgent</string>
    <string name="importance_unknown">Unknown</string>

</resources>
