<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="300dp">

    <ImageView
        android:id="@+id/close_dialog_button"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_close_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:id="@+id/liner_layout"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_rectangle_date"
                android:layout_width="135dp"
                android:layout_height="39dp"
                android:background="@drawable/rectangle_border" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_calender"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/ic_calender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/text_date"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="5dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_text"
                android:layout_marginStart="5dp"/>
            </LinearLayout>
        </RelativeLayout>


    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_reminder"
        android:hint="@string/reminder_text"
        android:background="@drawable/rectangle_border"
        android:paddingBottom="45dp"
        android:paddingLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingStart="5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_note"
                android:hint="@string/note_text"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:background="@drawable/rectangle_border"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="30dp"/>

            <ImageView
                android:id="@+id/image_additional_note"
                android:src="@mipmap/ic_additional_note"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"/>

        </RelativeLayout>

        </LinearLayout>


    <Button
        android:id="@+id/button_new_reminder"
        android:layout_centerInParent="true"
        android:text="@string/button_title_new_reminder"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/liner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
