<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorFragment">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_rectangle_date"
                android:layout_width="135dp"
                android:layout_height="39dp"
                android:background="@drawable/rectangle_border_fields" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_calender"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="5dp"
                    android:src="@mipmap/ic_calender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"/>

                <TextView
                    android:id="@+id/text_date"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/gray_dark_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_text"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_reminder"
        android:hint="@string/reminder_text"
        android:background="@drawable/rectangle_border_fields"
        android:paddingBottom="45dp"
        android:textColorHint="@color/gray_dark_text"
        android:textColor="@color/gray_dark_text"
        android:paddingLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingStart="5dp"/>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rectangle_border_fields" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_vertical"
            android:textColor="@color/gray_dark_text"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose your importance"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="right"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>

        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
    </LinearLayout>

      <LinearLayout
          android:layout_alignParentBottom="true"
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

       <Button
           android:background="@drawable/rectangle_border_buttons"
           android:id="@+id/cancel_button"
           android:layout_weight="1"
           android:text="@string/cancel_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

        <Button
            android:background="@drawable/rectangle_border_buttons"
            android:id="@+id/save_button"
            android:layout_weight="1"
            android:text="@string/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>

</RelativeLayout>